@@ -4,5 +4,5 @@
 # as: -32 -mips16
 
 .*:.*file format.*mips.*
-private flags = [0-9a-f]*[4-7c-f]......: .*[[,]mips16[],].*
+!private flags = .*mips16.*
 
